# SpecForge

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: install.cmd  install.ps1  install.sh  uninstall.cmd  uninstall.ps1  uninstall.sh
src/specforge/: __init__.py  __main__.py  cli.py  gaps.py  inventory.py  models.py  persistence.py  scanner.py  trace.py  writers.py
src/specforge/extractors/: dart.py  (+18 more)
tests/: fixtures.py  test_cli.py  test_core_scan.py  test_full_stack_scan.py  test_polyglot_scan.py  test_round100_calibration.py  test_round101_calibration.py  test_round102_calibration.py  test_round103_calibration.py  test_round104_calibration.py  test_round105_calibration.py  test_round106_calibration.py  test_round107_calibration.py  test_round108_calibration.py  test_round109_calibration.py  test_round10_calibration.py  test_round110_calibration.py  test_round111_calibration.py  test_round112_calibration.py  test_round113_calibration.py  test_round114_calibration.py  test_round115_calibration.py  test_round116_calibration.py  test_round117_calibration.py  test_round118_calibration.py  test_round119_calibration.py  test_round11_calibration.py  test_round120_calibration.py  test_round121_calibration.py  test_round122_calibration.py  test_round123_calibration.py  test_round125_calibration.py  test_round126_calibration.py  test_round127_calibration.py  test_round128_calibration.py  test_round129_calibration.py  test_round12_calibration.py  test_round130_calibration.py  test_round131_calibration.py  test_round132_calibration.py  (+151 more)
(+10 files in other folders)
