[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "specforge"
version = "0.2.0"
description = "Evidence-first codebase-to-spec generator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "SpecForge Contributors" }
]
keywords = ["spec", "codebase", "reverse-engineering", "openspec"]
dependencies = []

[project.scripts]
specforge = "specforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
